# synchronous-clock-fmus

./: .gitignore  CMakeLists.txt  README.md  synchronous_control_cs_out.csv  synchronous_control_me_out.csv  synchronous_control_me_out.xlsx  synchronous_control_me_out_ref.csv  synchronous_control_me_scenario.drawio
.github/workflows/: build.yml
Controller/: Controller.c  modelDescription.xml
Plant/: Plant.c  modelDescription.xml
Supervisor/: Supervisor.c  modelDescription.xml
include/: Custom.h  FMI.h  FMI3.h  fmi3Functions.h  orchestration_common.h
src/: FMI.c  FMI3.c  fmi3Functions.c  synchronous_control_cs.c  synchronous_control_me.c
